# NeonRust

./: .gitignore  Cargo.toml  struct.md  sysprog.hsop  tasks.txt  think.txt  think3.txt
base/: Cargo.toml
base/src/: account.rs  block.rs  blockchain.rs  cache.rs  consensus.rs  ecdsa.rs  epoch.rs  has_address.rs  hasher.rs  history.rs  instruction.rs  invoke_handler.rs  lib.rs  mutable_storage.rs  native_runner.rs  program.rs  program_result.rs  program_runtime.rs  runtime.rs  system_program.rs  timestamp.rs  transaction.rs  utils.rs  wrapper.rs
base/src/custom_runner/: mod.rs  sc_rpc.rs
base/src/system_program/: main_struct.rs  mod.rs  system_instruction.rs
cli/: Cargo.toml
cli/src/: app_args.rs  main.rs
config/src/: lib.rs  seed_words.rs
gui_wallet/: index.html  package-lock.json  package.json  vite.config.ts
gui_wallet/src/: App.svelte  app.css  settings.ts
gui_wallet/src-tauri/: Cargo.toml  tauri.conf.json
gui_wallet/src/lib/: LoginLoginPassword.svelte  LoginMain.svelte  LoginPrivateKey.svelte  LoginSeed.svelte  MainPage.svelte  Person.svelte  Send.svelte  TransactionWait.svelte
hashscript/: Cargo.toml
keypair/: Cargo.toml
not_neded/: blockchain_wrapper.rs  cache.rs  executor.rs  instruction.rs  message.rs  mutable_storage.rs  process_order.rs  program.rs  program_runtime.rs  second_runtime.rs  system_program.rs  wrapper.rs
poa/: Cargo.toml
poa/src/: authority_table.rs  lib.rs
py_keypair/: main.py
rpc/: Cargo.toml
rpc/src/: main.rs
validator/: Cargo.toml
validator/src/: block_voter.rs  block_votes.rs  epoch.rs  id.rs  main.rs  poa.rs  tx_pool.rs  validator_config.rs  vote.rs
