[package]
name = "base"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10.8"
k256 = "0.13.3"
rand = "0.8.5"
rand_core = "0.6.4"
hex = "0.4.3"
bs58 = "0.5.0"
serde = "1.0.195"
serde_json = "1.0.111"
