[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.14", features = ["derive"] }
dirs = "5.0.1"
base = {path = "../base"}
input_py = "0.1.0"
k256 = "0.13.3"
bs58 = "0.5.0"
reqwest = "0.11.26"
serde_json = "1.0.114"
config = { path = "../config" }
