[package]
name = "validator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base ={ path = "../base"}
rocket = { version = "0.5.0", features = [ "json" ]}
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
once_cell = "1.19.0"
reqwest = { version = "0.11.23", features = ["blocking"]}
k256 = "0.13.3"
config = { path = "../config" }
borsh = { version = "1.3.1", features = ["derive"] }